studio topmonks Portfolio section

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -340,22 +340,28 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2 class="h2_black">Our Portfolio</h2>
         </div>
-        <div class="portfolio-logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="portfolio-logo order1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/logo/pricefx.png" alt="Logo Price(Fx)" height="34" width="137">
         </div>
-        <div class="portfolio-logo order3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="portfolio-logo order3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/logo/techloop.io.png" alt="Logo Techloop.io" height="56" width="226">
         </div>
-        <div class="portfolio-logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="portfolio-logo order5 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/logo/realeurope.png" alt="Logo Go Real Europe" height="68" width="118">
         </div>
-        <div class="order2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="order2 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p>Price f(x) is the pricing suite designed especially for the needs of a holistic pricing process.</p>
         </div>
-        <div class="order4 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="order4 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p>Platform for matching IT professionals with hiring companies.</p>
         </div>
-        <div class="ordermdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="order6 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p>Europe Trip Planning app for 21st century.</p>
         </div>
       </div>
