studio topmonks - team and about section

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -56,7 +56,7 @@
               angels &amp; first investors.</p>
           </div>
           <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <a href="#contact" class="button">COME PITCH TO US</a>
+            <a href="#contacts" class="button">COME PITCH TO US</a>
           </div>
           <div class="avatar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="458" height="474" viewBox="0 0 458 474" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -325,7 +325,7 @@
           <h2>Do you have an idea for the next big thing?</h2>
         </div>
         <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="#contact" class="button button_filled">PITCH US</a>
+          <a href="#contacts" class="button button_filled">PITCH US</a>
         </div>
       </div>
     </div>
@@ -453,19 +453,19 @@
   <section id="team" class="team">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="team_member mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+        <div class="team_member member-fil mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
           <h4 title="Jiri Fabian">Jiri Fabian</h4>
           <p>Founder, president</p>
         </div>
-        <div class="team_member mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+        <div class="team_member member-linh mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
           <h4 title="Linh Nguyen">Linh Nguyen</h4>
           <p>Startups analyst</p>
         </div>
-        <div class="team_member mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+        <div class="team_member member-janko mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
           <h4 title="Jan Lopusek">Jan Lopusek</h4>
           <p>Net-worker</p>
         </div>
-        <div class="team_member mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+        <div class="team_member member-jiri mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
           <h4 title="Jiri Penzes">Jirí Penzes</h4>
           <p>Tech geek</p>
         </div>
@@ -553,7 +553,7 @@
           <a href="mailto:studio@topmonks.com ">studio@topmonks.com</a>
         </div>
         <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="#contact" class="button button_filled">COME PITCH TO US</a>
+          <a href="#contact" class="button button_filled">NEWSLETTER SIGN UP</a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <p>We occasionally send news about how our startups<br> perform, if we had some fuckups or successes recently.
@@ -563,44 +563,6 @@
     </div>
   </section>
 </div>
-
-<!-- <section id="references" class="references">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>References</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 startups-list">
-        <div class="startup"><a href="https://www.purposefly.com/"><img src="/images/logos/purposefly.png"
-                                                                        alt="PurposeFly" width="120"></a></div>
-        <div class="startup"><a href="https://lafluence.com/"><img src="/images/logos/lafluence.png" alt="Lafluence"
-                                                                   width="120"></a></div>
-        <div class="startup"><a href="https://swarmpit.io"><img src="/images/logos/swarmpit.png" alt="Swarmpit"
-                                                                width="120"></a></div>
-        <div class="startup"><a href="https://www.2pocket.com/"><img src="/images/logos/2pocket.png" alt="2pocket"
-                                                                     width="120"></a></div>
-        <div class="startup"><a href="https://www.pricefx.eu/" class="hatched"><img src="/images/logos/pricefx.png"
-                                                                                    alt="PriceFx" width="120"></a></div>
-        <div class="startup"><a href="https://techloop.io/" class="hatched"><img src="/images/logos/techloop.png"
-                                                                                 alt="Techloop" width="120"></a></div>
-        <div class="startup"><a href="https://www.kartapacienta.cz/" class="hatched"><img
-          src="/images/logos/cardoid.png" alt="Karta pacienta" width="120"></a></div>
-        <div class="startup"><a href="https://www.purposefly.com/ingrid/" class="hatched"><img
-          src="/images/logos/ingrid.png" alt="Ingrid" width="120"></a></div>
-        <div class="startup"><a href="https://www.gorealeurope.com/" class="hatched"><img
-          src="/images/logos/go-real-europe.png" alt="Go Real Europe" width="120"></a></div>
-        <div class="startup"><a href="https://www.coocooshop.com/"><img src="/images/logos/coocoon.png"
-                                                                        alt="Coocoo Shop" width="120"></a></div>
-        <div class="startup"><a href="http://www.bouncepilot.com/"><img src="/images/logos/bouncepilot.png"
-                                                                        alt="BouncePilot" width="120"></a></div>
-        <div class="startup"><a href="https://www.quickshirt.cz/"><img src="/images/logos/bouncepilot.png"
-                                                                       alt="BouncePilot" width="120"></a></div>
-
-      </div>
-    </div>
-  </div>
-</section>
--->
 <footer id="social" class="social">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
