prodeti: background fixes and teachers section refactoring (img moved to cloudinary)

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -186,16 +186,25 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="teachers_content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-12-desktop">
+          class="teachers_content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Naši lektoři</h2>
-          <img src="/images/lektori/jirka-machy.png">
+          <img title="Naši lektoři"
+               alt="[photo] naši lektoři"
+               src="https://res.cloudinary.com/topmonks/image/upload/w_938,q_auto,f_auto,dpr_auto/v1537458429/prodeti.topmonks.cz/lektori.jpg"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/w_938,q_auto,f_auto,dpr_auto/v1537458429/prodeti.topmonks.cz/lektori.jpg 1x,
+                      https://res.cloudinary.com/topmonks/image/upload/w_938,q_auto,f_auto,dpr_2/v1537458429/prodeti.topmonks.cz/lektori.jpg 2x"/>
         </div>
+      </div>
+      <div class="mdc-layout-grid__inner">
         <div
-          class="teachers_contact mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-12-desktop">
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="teachers_contact-box">
             <a class="mail" href="mailto:jan.machacek@topmonks.com">jan.machacek@topmonks.com</a><br>
             <a class="phone" href="tel:+420724973925">+420&nbsp;724&nbsp;973&nbsp;925</a>
           </div>
+        </div>
+        <div
+          class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="teachers_contact-box">
             <a class="mail" href="mailto:jiri.penzes@topmonks.com">jiri.penzes@topmonks.com</a><br>
             <a class="phone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a>
