--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -28,13 +28,15 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#C567B7">
   <meta name="msapplication-TileColor" content="#7645C1">
   <meta name="theme-color" content="#D5E9FF">
-  <meta name="description" content="Developers for your blockchain idea">
+  <meta name="description" content="What can we do for you? We’ll take care of your dApp or blockchain development. You’re thinking about starting ICO? We’ve got you covered!">
   <link rel="canonical" href="https://blockchain.topmonks.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
   <meta name="twitter:title" property="og:title" content="Developers for your blockchain idea">
+  <meta name="twitter:image" property="og:image" content="/og-image.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://blockchain.topmonks.com/">
+
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
