--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -178,21 +178,21 @@
     </section>
     <section id="mail" class="mail">
       <div class="mdc-layout-grid tm-layout-wrapper">
-        <div class="mdc-layout-grid__inner">
+        <form class="mdc-layout-grid__inner"
+              action="https://topmonks.us19.list-manage.com/subscribe/post?u=cdb5c1cf04e72dcfb3cd050cc&amp;id=92a3e1815e"
+              method="post">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p class="p_center">Subscribe to our mailing list</p>
           </div>
           <div
-            class="mail_filling mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-            <form>
-              <input type="email" name="EMAIL" placeholder="email adress...">
-            </form>
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+            <label><span class="a11y--hidden">Your e-mail:</span> <input class="mail_filling" type="email" name="EMAIL" placeholder="john.doe@hotmail.com" required></label>
           </div>
           <div
             class="subscribe mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-            <a href="" class="mail-button">SUBSCRIBE</a>
+            <button class="mail-button">SUBSCRIBE</button>
           </div>
-        </div>
+        </form>
       </div>
     </section>
   </main>
@@ -209,7 +209,8 @@
         <div
           class="pitch-box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="32.5" cy="32.5" r="32.5" fill="#FF7A7E"/>
                 <path
@@ -217,7 +218,8 @@
                   fill="white"/>
               </svg>
             </div>
-            <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+            <div
+              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>01. MEET US</h3>
               <p>Get friendly feedback on your project and some fine coffee or&nbsp;tea.</p>
             </div>
@@ -226,7 +228,8 @@
         <div
           class="pitch-box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
               <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g>
                   <circle cx="36.5" cy="32.5" r="32.5" fill="#56CCF2"/>
@@ -236,7 +239,8 @@
                 </g>
               </svg>
             </div>
-            <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+            <div
+              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>02. PROTOTYPE</h3>
               <p>Have a MVP or product crafted by some skilled tech-monks.</p>
             </div>
@@ -249,7 +253,8 @@
         <div
           class="pitch-box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="32.5" cy="32.5" r="32.5" fill="#FF865E"/>
                 <path
@@ -257,7 +262,8 @@
                   fill="white"/>
               </svg>
             </div>
-            <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+            <div
+              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>03. PARTNERSHIP</h3>
               <p>We summon your development team or help finding your new&nbsp;CTO.</p>
             </div>
@@ -266,7 +272,8 @@
         <div
           class="pitch-box box4 mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="32.5" cy="32.5" r="32.5" fill="#A8EFAF"/>
                 <path d="M45.6151 21H18.3872V41.5318H45.6151V21Z" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -281,7 +288,8 @@
                       stroke-linejoin="round"/>
               </svg>
             </div>
-            <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+            <div
+              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>04. GROWTH</h3>
               <p>We support you in growing your businesses, enhancing your skills, providing our network and help
                 raising
