--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -196,7 +196,7 @@
       </div>
     </section>
   </main>
-  <section id="pitch_us" class="pitch_us">
+  <section id="pitch-us" class="pitch_us">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -468,22 +468,20 @@
           <h2 class="h2_black">Blog</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>Psychology of raising angel funds for your startup</h3>
-          <span title="date">7. 9. 2018</span>
+          <h3><a href="https://blog.topmonks.com/how-to-raise-funds-for-your-startup-idea-5cfa33d0277e">Psychology of raising angel funds for your startup</a></h3>
+          <span title="date">8. 1. 2018</span>
           <p>Raising angel funds for your startup idea could be a difficult task. Couple of failures, bad lucks or
             setbacks while meeting with investors...</p>
         </div>
         <div class="white-box blog_middle-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>Why we invested in Quickshirt</h3>
-          <span title="date">7. 9. 2018</span>
-          <p>Raising angel funds for your startup idea could be a difficult task. Couple of failures, bad lucks or
-            setbacks while meeting with investors...</p>
+          <h3><a href="https://blog.topmonks.com/why-we-invested-in-quickshirt-9b95e510f3a4">Why we invested in Quickshirt</a></h3>
+          <span title="date">22. 8. 2018</span>
+          <p>This investment does not fit under the high scalable startup definition with multiple ROI. Yet, we consider it as a decent entrepreneurship which will help us stabilise our portfolio.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>Psychology of raising angel funds for your startup</h3>
-          <span title="date">7. 9. 2018</span>
-          <p>Raising angel funds for your startup idea could be a difficult task. Couple of failures, bad lucks or
-            setbacks while meeting with investors...</p>
+          <h3><a href="https://blog.topmonks.com/thriving-czech-slovak-crypto-scene-dd3dae269f5">Thriving Czech & Slovak crypto scene</a></h3>
+          <span title="date">9. 5. 2018</span>
+          <p>Many unexpected parts outside the Silicon Valley have sat in the frontier as blockchain innovation hubs.</p>
         </div>
       </div>
     </div>
