[www] Updated sales reps and team pickups

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -178,18 +178,18 @@ TopMonks - Software development partner for your business
         <p>Do you have any questions? Are you interested in working with us? Contact us.</p>
       </div>
       <div
-        class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img alt="[photo] Kristýna Sloupová"
-            src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg"
-            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg 1x,
-                    https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x">
+          <img alt="[foto] Ladislav Gerencséry" width="183"
+            src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg"
+            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg 1x,
+                    https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x">
         </div>
-        <h4>Kristýna Sloupová</h4>
-        <p>Senior Key Account Manager</p>
-        <a class="mail" href="mailto:kristyna.sloupova@topmonks.com">kristyna.sloupova@topmonks.com</a><br>
-        <a class="phone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br>
-        <a href="https://www.linkedin.com/in/krist%C3%BDna-sloupov%C3%A1-0a5b1579/" title="Krystýna Sloupová on LinkedIn" rel="me" itemprop="sameAs"
+        <h4>Ladislav Gerencséry</h4>
+        <p>Sales Account Manager</p>
+        <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a><br>
+        <a class="phone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
+        <a href="https://www.linkedin.com/in/ladislavgerencsery/" title="Ladislav Gerencséry on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
@@ -209,21 +209,18 @@ TopMonks - Software development partner for your business
             </g>
           </svg>
         </a>
-
       </div>
       <div
-        class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img alt="[foto] Ladislav Gerencséry"
-            src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg"
-            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg 1x,
-                    https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x">
+          <img alt="[photo] Přemysl Novák" width="183"
+               src="https://insight.topmonks.com/avatar/premysl-novak">
         </div>
-        <h4>Ladislav Gerencséry</h4>
-        <p>Sales Account Manager</p>
-        <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a><br>
-        <a class="phone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
-        <a href="https://www.linkedin.com/in/ladislavgerencsery/" title="Ladislav Gerencséry on LinkedIn" rel="me" itemprop="sameAs"
+        <h4>Přemysl Novák</h4>
+        <p>Key Account Manager</p>
+        <a class="mail" href="mailto:premysl.novak@topmonks.com">premysl.novak@topmonks.com</a><br>
+        <a class="phone" href="tel:+420776845525">+420&nbsp;776&nbsp;845&nbsp;525</a><br>
+        <a href="https://www.linkedin.com/in/premysl-novak-786188169/" title="Přemysl Novák on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
