--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -68,7 +68,7 @@
           <h2>Náš team</h2>
         </div>
         {{ macros.teamMember(members['jiri-fabian'], true) }}
-        {{ macros.teamMember(members['kristyna-sloupova'], true) }}
+        {{ macros.teamMember(members['anna-kovacsova'], true) }}
         {{ macros.teamMember(members['ladislav-gerencsery'] , true) }}
         {{ macros.teamMember(members['lea-petrasova'], true) }}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
