--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -56,7 +56,7 @@
           <h2>Our Team</h2>
         </div>
         {{ macros.teamMember(members['jiri-fabian'], true) }}
-        {{ macros.teamMember(members['kristyna-sloupova'], true) }}
+        {{ macros.teamMember(members['anna-kovacsova'], true) }}
         {{ macros.teamMember(members['ladislav-gerencsery'] , true) }}
         {{ macros.teamMember(members['lea-petrasova'], true) }}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
